samples/_failures_safe/1761699732_4c19c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_417e7314.c: In function ‘tokenize’:
./samples/SAFE/__tmp_417e7314.c:172:5: error: expected expression at end of input
  172 |     if (*token_count <
      |     ^~
./samples/SAFE/__tmp_417e7314.c:172:5: error: expected declaration or statement at end of input
